@@ -48,7 +48,11 @@ public class ComponentPieceData extends StdWebMacro
 	        String fixedCompID=compID.replace(' ','_').toUpperCase();
 			StringBuilder str=new StringBuilder("");
 			if(parms.containsKey("MASK")||parms.containsKey("MASKEDIT"))
-				str.append(httpReq.getRequestParameter(fixedCompID+"_PIECE_MASK_"+last));
+			{
+				String s=httpReq.getRequestParameter(fixedCompID+"_PIECE_MASK_"+last);
+				if(s==null) s="";
+				str.append(s);
+			}
 			if(parms.containsKey("STRING"))
 			{
 				String type=httpReq.getRequestParameter(fixedCompID+"_PIECE_TYPE_"+last);
